--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.10",
     "mockjs": "^1.0.1-beta3",
+    "moment": "^2.26.0",
     "nprogress": "^0.2.0",
     "vue": "^2.5.2",
     "vue-i18n": "^7.3.2",
@@ -37,6 +38,7 @@
     "cheerio": "^1.0.0-rc.2",
     "connect-history-api-fallback": "^1.4.0",
     "copy-webpack-plugin": "^4.2.0",
+    "crypto-js": "^4.0.0",
     "css-loader": "^0.28.7",
     "eslint": "^4.11.0",
     "eslint-friendly-formatter": "^4.0.1",
@@ -55,7 +57,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.0.5",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.13.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^4.0.1",
     "ora": "^2.1.0",
